fixed the z-index of lightbox; change wrapper height from height to min-height to fit infinite table row

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 .wrapper {
 	padding:20px 100px 0px 100px;
 	background-color: powderblue;
+	min-height: 1100;
 }
 
 ul, ol {
@@ -18,7 +19,7 @@ ul, ol {
 .quesWrapper {
 	padding: 5px 10px 5px 20px;
 	background-color: white;
-	height: 1100px;
+	min-height: 1100px;
 }
 
 .quesWrapper h1 {
@@ -191,7 +192,7 @@ h3.whoseTurn {
 	background-color: white;
 	text-align: left;
 	height: 50px;
-	z-index: 10000;
+	z-index: 9998;
 }
 
 .showAnsRow .showAns {
@@ -429,6 +430,7 @@ h3.whoseTurn {
 	border: 1px dashed whitesmoke;
 	padding-top: 10px;
 	border-top: none;
+	margin-bottom: 200px;
 }
 
 .easyAnswer .easyAnswerBullet {
@@ -437,6 +439,9 @@ h3.whoseTurn {
 	border-radius: 50%;
 	margin-top: 5px;
 	margin-bottom: 5px;
+	text-align: center;
+	padding-top: 5px;
+	color: white;
 
 }
 
